# door-manager

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app/: requirements.txt
app/app/: settings.py  urls.py
app/interface/: admin.py  apps.py  forms.py  models.py  setting2.py  testBD.py  urls.py  views.py
app/interface/static/interface/css/: styles.css
app/interface/templates/: index.html
app/interface/templates/interface/: adduser.html  base.html  index.html  logs.html  user.html
documentation/: openapi.yaml
door/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
door/documentation/: database.puml
door/migrations/: 0001_initial.py
door/static/door/css/: styles.css
door/templates/door/: about.html  adduser.html  base.html  error.html  history.html  index.html  info.html  list_door.html  login.html  register.html  support.html  users.html
door/templatetags/: door_tags.py
door_manager/: asgi.py  settings.py  urls.py  wsgi.py
