[tool.poetry]
name = "door-manager-9"
version = "0.1.0"
description = ""
authors = ["nesrv <ne_srv@mail.ru>"]
readme = "README.md"
packages = [{include = "door_manager_9"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
aiohttp = "3.7.3"
aiohttp-jinja2 = "1.5"
authlib = "1.0.1"
environs = "9.5.0"
django-simple-captcha = "0.5.17"
django-debug-toolbar = "3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
